sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: unclosed character literal
  'while (trie==false) {'
                        ^AlgBubbleSort1:4: error: illegal start of statement
  'while (trie==false) {'
                        ^